Modified test suite from previous project

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ deps =
 commands =
     # NOTE: you can run any command line tool here - not just tests
     coverage run -m pytest
-    pycodestyle octave/
-    pydocstyle octave/
-    bandit -r ./octave
+    pycodestyle rstatic/
+    pydocstyle rstatic/
+    bandit -r ./rstatic
     coverage report --omit=".tox/*,tests/*"
