--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ services:
 install:
   - pip install -r requirements/release.txt
 script:
-  #- tox --result-json=./logs/log-$( date '+%F_%H:%M:%S' ).json
   - tox
-  - python setup.py sdist bdist_wheel
-  - twine upload --repository testpypi dist/*
+deploy:
+  provider: pypi
+  username: "__token__"
+  password: $pypi_token
