--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
 deploy:
   provider: pypi
   username: "__token__"
-  password: $pypi_token
+  password: $PYPI_TOKEN
   on:
     branch: master
     tags: true
