--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
 deploy:
   provider: pypi
   username: "__token__"
-  password: $PYPI_TOKEN
+  password: "pypi-$PYPI_TOKEN_PASSWORD"
   on:
     branch: master
     tags: true
